fixed button positioning
button was out of place in mid resolutions

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -6,6 +6,7 @@
     
     .avatar {
         flex: 1;
+        height: fit-content;
     }
 
     .content {
